--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>拖动</title>
+    <title>QQ登录界面</title>
     <link href="css/main.css" rel="stylesheet" />
     <script src="js/drag.js"></script>
 </head>
